@@ -11,6 +11,18 @@ version migration
 0.9.6 incompatible changes
 ==========================
 
+Exception handling with position information
+--------------------------------------------
+``xml.dom.DOMException``\ s raised do now contain infos about the position where the exception occured. An exception might for example have been raised as::
+
+    raise xml.dom.SyntaxErr('the message', 10, 5)
+
+(where 10 is the line and 5 the column of the offending text).
+
+Therefor you may **not** simply use ``str(e)`` to get the exception message but you have to use ``msg, line, col = e.args[0], e.args[1], e.args[2]``. Additionally exceptions raised have attributes ``e.line`` and ``e.col``.
+
+
+
 CSSValue / Property has been rewritten
 --------------------------------------
 - moved validating of a property from ``CSSValue`` to ``Property``
